syntax = "proto3";

package yandex.cloud.events.storage;

import "google/rpc/status.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";
import "yandex/cloud/events/options.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/storage;storage";
option java_package = "yandex.cloud.api.events.storage";

message BucketCreate {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string bucket_id = 1 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message BucketDelete {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string bucket_id = 1 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message BucketUpdate {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string bucket_id = 1 [(required) = true];
    int64 max_size = 2;
    string objects_access = 3;
    string list_access = 4;
    string settings_read_access = 5;
    string storage_class = 6;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message BucketAclUpdate {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string bucket_id = 1 [(required) = true];
    string rule = 2 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message BucketLifecycleUpdate {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string bucket_id = 1 [(required) = true];
    string rule = 2 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message BucketCorsUpdate {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string bucket_id = 1 [(required) = true];
    string rule = 2 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message BucketWebsiteUpdate {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string bucket_id = 1 [(required) = true];
    string rule = 2 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message BucketHttpsUpdate {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string bucket_id = 1 [(required) = true];
    string certificate_id = 2 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message BucketPolicyUpdate {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string bucket_id = 1 [(required) = true];
    string rule = 2 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message ObjectCreate {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string bucket_id = 1 [(required) = true];
    string object_id = 2 [(required) = true];
    int64 version = 3;
    string version_id = 4;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message ObjectDelete {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string bucket_id = 1 [(required) = true];
    string object_id = 2 [(required) = true];
    int64 version = 3;
    string version_id = 4;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message ObjectUpdate {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string bucket_id = 1 [(required) = true];
    string object_id = 2 [(required) = true];
    int64 version = 3;
    string version_id = 4;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}
